{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 8,
  "lineage": "d3236cae-3a9f-f6ed-5b1b-1f6a871f66b5",
  "resources": [
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "westeurope",
            "name": "nsg",
            "resource_group_name": "dtf-virtual-network-test",
            "security_rule": [],
            "tags": {
              "CreationDateTime": "2023-07-26T13:01:38.1518161Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/routeTables/rt",
            "location": "westeurope",
            "name": "rt",
            "resource_group_name": "dtf-virtual-network-test",
            "route": [],
            "subnets": [],
            "tags": {
              "CreationDateTime": "2023-07-26T13:01:38.5325996Z",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "TestSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet/subnets/TestSubnet",
            "name": "TestSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dtf-virtual-network-test",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.route_table.azurerm_route_table.rt",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "TestSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet/subnets/TestSubnet",
            "network_security_group_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet/subnets/TestSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.route_table.azurerm_route_table.rt",
            "module.vnet.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "TestSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet/subnets/TestSubnet",
            "route_table_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/routeTables/rt",
            "subnet_id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet/subnets/TestSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "module.nsg.azurerm_network_security_group.nsg",
            "module.route_table.azurerm_route_table.rt",
            "module.vnet.azurerm_subnet.subnets",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "11.0.0.0"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "94559188-0c47-4c9e-9dff-77b1c576f48b",
            "id": "/subscriptions/d94fe338-52d8-4a44-acd4-4f8301adf2cf/resourceGroups/dtf-virtual-network-test/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "westeurope",
            "name": "vnet",
            "resource_group_name": "dtf-virtual-network-test",
            "tags": {
              "CreationDateTime": "2023-07-26T13:01:38.4973918Z",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    }
  ]
}